<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left" >

    <TextView
        android:id="@+id/fech"
		android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/fech" />
    
    <TextView
        android:id="@+id/hora"
		android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/hora_string" />

    <TextView
        android:id="@+id/sala"
		android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/sala_string" />

    <TextView
        android:id="@+id/pa"
		android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/paciente_string" />

    <TextView
        android:id="@+id/dg"
		android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/diagnostico_string" />
    
    <!-- LINEAR PARA ALMACENAR LOS BUTTONS -->
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/btnPre"
	        android:layout_width="wrap_content"
	        android:layout_height="37dp"
	        android:text="PO"/>
	    
	    <Button
	        android:id="@+id/btnPre"
	        android:layout_width="wrap_content"
	        android:layout_height="37dp"
	        android:text="PO"/>
	    <Button
	        android:id="@+id/btnPre"
	        android:layout_width="wrap_content"
	        android:layout_height="37dp"
	        android:text="PO"/>
	    <Button
	        android:id="@+id/btnPre"
	        android:layout_width="wrap_content"
	        android:layout_height="37dp"
	        android:text="PO"/>
    </LinearLayout>

</TableRow>